# learning-bark

./: .gitignore  Makefile  pyproject.toml
samples/: japanese.py  pizza.py
