[tool.poetry]
name = "learning-bark"
version = "0.1.0"
description = ""
authors = ["gomesuit <9404411+gomesuit@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "learning_bark"}]

[tool.poetry.dependencies]
python = "^3.10"
suno-bark = {git = "https://github.com/suno-ai/bark.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
